# RawSpeechClassification

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  run-all.sh  run.sh
.github/workflows/: deploy.yml  qa.yml  tests.yml
.reuse/: dep5
.reuse/templates/: idiap_template.jinja2
conda/: legacy-forge.yaml  legacy.yaml  rsclf-jax.yaml  rsclf-pytorch.yaml  rsclf-tensorflow.yaml  tensorflow-216-keras-3.yaml  tf215.yaml
datasets/IEMOCAP/F1_lists/: cv.list  test.list  train.list
docs/: log.txt
rsclf/: __init__.py  model_architecture.py  plot.py  rawdataset.py  test.py  train.py  utils.py  wav2feat.py
steps/: model_architecture.py  rawGenerator.py  rawdataset.py  test.py  train.py  utils.py  wav2feat.py
